Unreal Class System

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=674C33834686C4CA6BFB45AB02027115
+CompanyName=Symple Ltd
+CopyrightNotice=Copyright Asif Khan 2017
 
 [StartupActions]
 bAddPacks=True
